k8s/manifests/ingress.yaml
#################################################################################################################################################

#Ingress controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-rekognition-ingresscontroller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: face-rekognition.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: face-rekognition-service
                port:
                  number: 80
